# CPP-IM

./: CMakeLists.txt  README.md
script/: cassandra.cql  clear_pb.sh  config.md  create_pb.sh  create_tables.sql  mongodb.js  mysql.sql  run.md
server/: CMakeLists.txt
server/include/: connection_pool.h  mysql_pool.h  redis_pool.h  singleton.h  spd_gflag.h  thread_pool.h  token_verify.h
server/login/: README.md  dump.rdb  go.mod  go.sum  main.go
server/login/config/: config.yaml
server/login/controller/: auth.go  code.go  common.go  friend.go  user.go
server/login/dao/mysql/: error.go  mysql.go  user.go
server/login/dao/redis/: redis.go  user.go
server/login/logger/: logger.go
server/login/logic/: user.go
server/login/models/: user.go
server/login/pkg/grpc/: client_pool.go  route.pb.go  route_grpc.pb.go  varify.pb.go  varify_grpc.pb.go
server/login/pkg/jwt/: jwt.go
server/login/pkg/snowflake/: snowflake.go
server/login/routers/: router.go
server/login/settings/: settings.go
server/msg_gate/: CMakeLists.txt  async_logic_client.cc  async_logic_client.h  gate_server.cc  gate_server.h  logic_pool.cc  logic_pool.h  main.cc  msg_service_impl.h  user_mgr.h  ws_app.cc  ws_app.h
server/msg_logic/: CMakeLists.txt  kafka_producer.cc  kafka_producer.h  logic_server.cc  logic_server.cpp  logic_server.h  main.cc  msgid.h
server/proto/: CMakeLists.txt  msg.grpc.pb.cc  msg.grpc.pb.h  msg.pb.cc  msg.pb.h  msg.proto  push.grpc.pb.cc  push.grpc.pb.h  push.pb.cc  push.pb.h  push.proto  route.grpc.pb.cc  route.grpc.pb.h  route.pb.cc  route.pb.h  route.proto  varify.grpc.pb.cc  varify.grpc.pb.h  varify.pb.cc  varify.pb.h  varify.proto
server/push/: CMakeLists.txt  async_gate_client.cc  async_gate_client.h  main.cc  push_server.cc  push_server.h
server/route/: CMakeLists.txt  main.cc  route_service_impl.cc  route_service_impl.h
server/transfer/: CMakeLists.txt  kafka_consumer.cc  kafka_consumer.h
server/transfer/cassandra/: main.cc
server/transfer/mongodb/: main.cc
server/transfer/mysql/: README.md  main.cc
server/varify/: CMakeLists.txt  main.cc  redis_pool.cpp  redis_pool.h  smtp.cc  smtp.h  varify_service_impl.cc  varify_service_impl.h
tests/: CMakeLists.txt  test.cc
